--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,15 @@ dmypy.json
 .history/
 
 .mypy_cache
+
+# Dev\hw03_forms.gitignore
+.sta/
+.idea/
+.static/
+yatube/static/
+yatube/static
+yatube/.static/
+yatube/.static/
+.yatube/static/
+/yatube/static/
+/yatube/static/
